add link to the very large raw table

--- a/filter.ipynb
+++ b/filter.ipynb
@@ -10,7 +10,7 @@
     "```.\\psql.exe copy public.play (player_id, game_id, time_end, team, mean, std) TO play_data.csv CSV HEADER ENCODING 'UTF8' QUOTE '\\\"' ESCAPE '''';```\n",
     "\n",
     "The exported table is still quite large (2 GB).\n",
-    "Please access [Google Drive]() to download it.\n",
+    "Please access [Google Drive](https://drive.google.com/open?id=1g-_AF9FdiUhvbGJ3hLizM9ujKkGq8vnT) to download it.\n",
     "Using my PC, I cannot process this table as a R dataframe.\n",
     "As a result, I turn to Python to read & filter the data."
    ]
