fix minor typos

--- a/filter.ipynb
+++ b/filter.ipynb
@@ -9,6 +9,11 @@
     "After configuring the database, I embed my a SQL query into an export command:\n",
     "```.\\psql.exe copy public.play (player_id, game_id, time_end, team, mean, std) TO play_data.csv CSV HEADER ENCODING 'UTF8' QUOTE '\\\"' ESCAPE '''';```\n",
     "\n",
+    "The meaning of some important entries:\n",
+    " - `player_id` & `game_id`: global identifiers of players & games\n",
+    " - `team`: team id (of a particular game)\n",
+    " - `mean` & `std`: statistics of skills\n",
+    "\n",
     "The exported table is still quite large (2 GB).\n",
     "Please access [Google Drive](https://drive.google.com/open?id=1g-_AF9FdiUhvbGJ3hLizM9ujKkGq8vnT) to download it.\n",
     "Using my PC, I cannot process this table as a R dataframe.\n",
@@ -91,7 +96,7 @@
     "# excute step 1&2\n",
     "original_table_path = \"play_data.csv\"\n",
     "\n",
-    "MIN_FREQ = 500\n",
+    "MIN_FREQ = 10\n",
     "\n",
     "solo_player_set = solo_player_finder(original_table_path, group_game_finder(original_table_path))"
    ]
